--- a/day04/1-适配rem.html
+++ b/day04/1-适配rem.html
@@ -6,25 +6,45 @@
 <!--          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-        #box {
-            width: 200px;
-            height: 200px;
-            background: red;
-        }
-    </style>
+
     <script>
       (function () {
-        var metaEl = document.createElement('meta');
-        var scale = devicePixelRatio;
+        const metaEl = document.createElement('meta');
+        const scale = devicePixelRatio;
         metaEl.setAttribute('name', 'viewport');
         metaEl.setAttribute('content', 'initial-scale=' + (1/scale) + ', maximum-scale=' + (1/scale) + ', minimum-scale=' + (1/scale) + ', user-scalable=no');
         document.documentElement.firstElementChild.appendChild(metaEl);
       })();
+      // root em 设置
+      (function (){
+        // 375/15 = 25
+        // 1rem 等于屏幕尺寸的15分之一
+        const doc = document.documentElement;
+        doc.style.fontSize = window.innerWidth / 15 + 'px'
+      })()
     </script>
+    <style>
+        body {
+            margin: 0;
+        }
+        #box {
+            display: flex;
+        }
+        /* 1 rem = 1 root(html) font size*/
+        #box div {
+            width: 6.96rem;
+            height: 3.6rem;
+            background: red;
+            margin: 0 0.2rem;
+            font-size: 0.64rem;
+        }
+    </style>
 </head>
 <body>
-<div id="box"></div>
+<div id="box">
+    <div>尖货抽签</div>
+    <div>新品日历</div>
+</div>
 <script>
   // 在更小的尺寸中展现更多的像素值
   // 原先1px的内容，放大到 devicePixelRatio px显示
