feat: add PC&mobile drag

--- a/day04/8-PC拖拽.html
+++ b/day04/8-PC拖拽.html
@@ -52,7 +52,12 @@
     list.style.transform = `translate3d(0,${y}px,0)`
   };
   list.addEventListener('mousemove', (e) => {
-
+    startPoint= e.clientY
+    startEl = y
+    document.addEventListener('mousemove',move)
+    document.addEventListener('mouseup',() => {
+      document.removeEventListener('mousemove',move)
+    })
   })
 </script>
 </body>
